@@ -1,3 +1,11 @@
+2024-09-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-file-name*): Embed `function-put' calls with
+	`tramp--with-startup'.
+	(tramp-active-command-completion-p)
+	* tramp-cache.el (tramp-get-hash-table): Remove declare form.  Add
+	`tramp-suppress-trace' function property.
+
 2024-08-27  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-mode): Make it a defvar.  People shouldn't
